finally fixed jumbotron button due to z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ html, body {
     bottom: 0;
     margin-bottom: 0px;
     height: 100vh;
-    z-index: -10;
+    /* z-index: -10; */
     /* height: 560px;
     width: 5076px;
     animation: slide 60s linear infinite;
@@ -57,7 +57,7 @@ html, body {
     margin-bottom: 0px;
     height: 100%;
     max-width: 100%;
-    z-index: -5;
+    /* z-index: -5; */
 
 }
 
@@ -70,6 +70,23 @@ html, body {
     padding-top: 20px;
 
 }
+
+#viewButt {
+
+    padding-top: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+
+/* #viewButt btn:hover{
+
+    
+    background: yellowgreen;
+
+}  */
 
 #nbar {
 
